--- a/style.css
+++ b/style.css
@@ -14,16 +14,20 @@ body {
   background-color: var(--Light-gray);
   font-family: sans-serif;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
 }
 .scene {
   background-color: var(--white);
-  width: 300px;
+  max-width: 20rem;
   padding: 20px;
   border-radius: 20px;
   margin: 50px auto;
 }
 img {
-  width: 260px;
+  max-width: 100%;
   border-radius: 20px;
 }
 .card {
@@ -49,9 +53,14 @@ p {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+a:hover {
+  color: blueviolet;
+}
+a:active{
+  color: chartreuse;
+}
 
-
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
     body{
         height: 80vh;
     }
@@ -64,6 +73,6 @@ p {
     width: 100%;
     margin: auto;
   }
-}
+} */
 
 
